--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,17 @@ h2 {
     text-align: center;
 }
 
+/* Novas funcionalidades */
+#color-value {
+    min-width: 100px;
+}
+
+#inset {
+    align-self: start;
+    height: 20px;
+    width: 20px;
+}
+
 /* Preview */
 #box {
     width: 100%;
@@ -98,5 +109,43 @@ h2 {
     background-color: #d3d3d3;
     max-width: 1000px;
     margin: 0 auto;
-    border: 2px solid #f49714;
+    border: 3px solid #f49714;
+    padding: 1rem;
+    transition: .4s;
+    cursor: pointer;
 }
+
+#rules-area:hover {
+    background-color: #dfdfdf;
+}
+
+#copy-instructions {
+    font-style: italic;
+    margin-top: 1rem;
+}
+
+/* Responsivo */
+
+@media (max-width: 425px) {
+    #box-shadow-generator {
+        flex-direction: column;
+    }
+
+    #controls-container, 
+    #preview{
+        padding: 1rem 2rem;
+    }
+
+    #box {
+        width: 60%;
+        height: 200px;
+        margin: 0 auto;
+    }
+
+    #generated-rule {
+        margin-top: 1.5rem;
+    }
+
+    
+}
+
